--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
   },
